Fixes #3; hide cue list scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,7 @@ body {
         segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto,
         arial, sans-serif;
 }
+
+.scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+}
